Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-44827

Very Slow SELECT_BUCKET operations

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • Cheshire-Cat
    • memcached
    • None
    • Triaged
    • 1
    • Yes
    • KV-Engine 2021-March

    Description

      This is a spin-off ticket from MB-44024, where timeouts are being seen from the SDK.
      Looking at KV we can see some very slow SELECT_BUCKET operations.

      These should be fast..

      Attachments

        Issue Links

          Activity

            People

              owend Daniel Owen
              owend Daniel Owen
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty