MB-44827: Add more fine grained probes for bucket association

And replace explicit start stop of newly added trace probes with
ScopeTimer1 and the SpanStopwatch class

Change-Id: Ie390e52bb93d9b5ccf4763b7ca9642f3ffac84aa
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/148824
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>